commenst chap 3 guidelines

--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -49,9 +49,9 @@ where, $p$ is probability, $B_0$ and $B_1$ are estimated logistic regression par
 \end{equation}
 
 An example logistic regression fit is shown in Figure \@ref(fig:example-logisticFit), with LRPs associated with four probability thresholds, 0.5, 0.66, 0.90, 0.99, representing levels associated with being more likely than not, likely, very likely, and virtually certain as defined by the International Panel on Climate Change, IPCC [@mastrandreaGuidanceNoteLead2010]. We do not recommend a specific probability level here, and instead demonstrate the implication of various choices. Although LRPs are intended to be identified by Science to represent the best scientific estimate of level below which serious harm is occurring [@dfoScienceAdvicePrecautionary2021] without necessarily introducing additional precaution under uncertainty <!--ref?-->, there is no scientific basis to choose one probability over others. Uncertainty in logistic-regression based LRP estimates can be quantified based on a 95% confidence interval on the maximum likelihood estimate , MLE (see our application to Interior Fraser Coho Salmon (Holt et al. in review)). 
-<!-- CW: One could also quantify uncertainty based in a 95% Bayesian credibility interval. Suggest replacing the above sentence with:
+<!-- CW: One could also quantify uncertainty based on Bayesian credibility intervals, and it doesn't have to be 95%. Suggest replacing the above sentence with:
 
-Uncertainty in logistic-regression based LRP estimates can be quantified based on confidence or creibility intervals on the LRP estimate (see our application to Interior Fraser Coho Salmon (Holt et al. in review)).
+Uncertainty in logistic-regression based LRP estimates can be quantified based on confidence or credibility intervals on the LRP estimate (see our application to Interior Fraser Coho Salmon (Holt et al. in review)).
 
 
 
@@ -62,22 +62,23 @@ Uncertainty in logistic-regression based LRP estimates can be quantified based o
 knitr::include_graphics("figure/methods-Example-LogisticLRP.png")
 ```
 
-We recommend evaluating the fit of the logistic regression prior to the development of LRPs to identify its reliability in determining serious harm to component CUs. Diagnostics commonly used for logistic regression of Bernoulli distributed data are provided in Holt et al. (in review), for example, evaluating the assumptions that the aggregate abundances is linearly related to log-odds of all CUs being above their lower benchmarks, observations are independent, and there are no influential outliers. In addition, the statistical significance of the predictor variable, aggregate abundances and the goodness-of-fit of the logistic model can inform its reliability for determining LRPs. Furthermore, the classification accuracy of LRPs developed from a logistic regression can be evaluated on the observed data using the performance metric, hit ratio. This ratio represents the proportion of successful classifications above or below the logistic regression-derived LRP, relative to the total number classifications or years.  Out-of-sample cross-validation methods can be applied so that model-based LRPs do not include the observed data used for evaluation in this performance metric.
+We recommend evaluating the fit of the logistic regression prior to the development <!--implementation --> of <!--logistic regression-based --> LRPs to identify its reliability in determining serious harm to component CUs. Diagnostics commonly used for logistic regression of Bernoulli distributed data are provided in Holt et al. (in review), for example, evaluating the assumptions that the aggregate abundances is linearly related to log-odds of all CUs being above their lower benchmarks, observations are independent, and there are no influential outliers. In addition, the statistical significance of the predictor variable, aggregate abundances and the goodness-of-fit of the logistic model can inform its reliability for determining LRPs. Furthermore, the classification accuracy of LRPs developed from a logistic regression can be evaluated on the observed data using the hit ratio performance metric. This ratio represents the proportion of successful classifications above or below the logistic regression-derived LRP, relative to the total number classifications or years.  Out-of-sample cross-validation methods can be applied so that model-based LRPs do not include the observed data used for evaluation in this performance metric. <!-- CW: Isn't loo an out-of-sample method? -->
 
 
-We applied a single metric on spawner abundances to approximate CU-status because multidimensional approaches for WSP assessments include  generational smoothing of spawner abundance and metrics of temporal trends, which introduces autocorrelation in observed CU statuses, violating an assumption of the logistic regression model. Future research could consider logistic regression-based models that include autocorrelated residuals to develop LRPs based on CU-statuses provided from the Rapid Multidimensional Scanning Tool.
+<!-- CW: To estimate the Logistic regression-based LRPS, --> We applied a single metric on spawner abundances to approximate CU-status because multidimensional approaches for WSP assessments include  generational smoothing of spawner abundance and metrics of temporal trends, which introduces autocorrelation in observed CU statuses, violating an assumption of the logistic regression model. Future research could consider logistic regression-based models that include autocorrelated residuals to develop LRPs based on CU-statuses provided from the Rapid Multidimensional Scanning Tool. <!--CW: Do we need this paragraph here? I think this is more of a method thing, and could be only in the case study paper -->
 
+<!--CW: replace first sentece with:  We recommend using a statistically integrated estimation approach to estimating Logistic regression-based LRPs, where (...) -->
 Using a single-metric proxy for CU status also allowed us to use a statistically integrated estimation approach, where CU-level stock-recruitment models and associated CU-level benchmarks were estimated in the same model as the logistic regression and LRP derivation. In this way, the uncertainty from CU-level assessments can be propagated to the development of the LRP and the assessment against that LRP. The model provides the probability of being below the LRP in the current year that explicitly accounts for uncertainty in CU-level assessments against their lower benchmarks.  
 
 
-Furthermore, structural uncertainty in underlying assumptions about the basis of CU-level benchmarks, such as spawner-recruitment relationship can be addressed in at least three ways. First, the weight of evidence for various assumptions can be identified to identify the assumptions with the most support for underlying CU dynamics and CU status, which is then used for LRP development. Second, various assumptions can be provided as sensitivity analyses demonstrating the impact of assumptions about CU dynamics on LRPs estimates and current status, if possible with a narrative describing which is considered a base case. Third, LRPs can be averaged by, for example, combining posterior probability estimates. When averaging, LRPs can be weighted according to the strength of evidence for each hypothesis based on statistical criteria (e.g., AIC), retrospective performance, or expert opinion [@rossiInferringFisheriesStock2019; @jardimOperationalizingEnsembleModels2021].
+Furthermore, structural uncertainty in underlying assumptions about the basis of CU-level benchmarks, such as spawner-recruitment relationship can be addressed in at least three ways. First, the weight of evidence for various assumptions can be considered to identify the assumptions with the most support for underlying CU dynamics and CU status, which is then used for LRP development. Second, various assumptions can be provided as sensitivity analyses demonstrating the impact of assumptions about CU dynamics on LRPs estimates and current status, if possible with a narrative describing which is considered a base case. Third, LRPs can be averaged by, for example, combining posterior probability estimates. When averaging, LRPs can be weighted according to the strength of evidence for each hypothesis based on statistical criteria (e.g., AIC), retrospective performance, or expert opinion [@rossiInferringFisheriesStock2019; @jardimOperationalizingEnsembleModels2021].
 
-Logistic regression-based LRPs are aligned with Principle 1 to the extent that serious harm is indicated by status of any one CU being in the red zone under the WSP and that the estimated relationship between aggregate abundances and probability of all CUs being above their lower benchmark holds. Logistic regression-based LRPs use only one metric of spawner abundances, and therefore do not use the best available information (Principle 2) when CUs statuses rely on other metrics, such as trends in data-limited contexts. Also, logistic regression-LRPs approximate CU status by comparing annual spawner abundances to benchmarks instead of generationally smoothed spawner abundances and so may capture noise in abundance trends instead of true status that is likely autocorrelated over time (see Holt et al. (in review) for more details). In some cases, status based on the single metric on spawner abundances may diverge with that based on multidimensional approaches, e.g., the Rapid Multidimensional Scanning Tool.
+Logistic regression-based LRPs are aligned with Principle 1 to the extent that serious harm is indicated by status of any one CU being in the red zone under the WSP and that the estimated relationship between aggregate abundances and probability of all CUs being above their lower benchmark holds. Logistic regression-based LRPs use only one metric of spawner abundances, and therefore do not use the best available information (Principle 2) when CUs statuses rely on other metrics, such as trends in data-limited contexts. <!-- CW: but in these instances the logistic method is not recommended, right? --> Also, logistic regression-LRPs approximate CU status by comparing annual spawner abundances to benchmarks instead of generationally smoothed spawner abundances and so may capture noise in abundance trends instead of true status that is likely autocorrelated over time (see Holt et al. (in review) for more details). In some cases, status based on the single metric on spawner abundances may diverge with that based on multidimensional approaches, e.g., the Pacific Salmon Status Scanner.
 
 Logistic regression-based LRPs are operational (Principle 3) to some extent when harvest management occurs at the aggregate level and require aggregate-abundance based LRP to inform management decisions. However, they are more difficult to communicate being derived from model outputs, and they require the choice of probability of all CUs being above their lower benchmarks which is difficult to justify. <!--CH removed since it's mostly repeated in the next pgh: "Logistic-regression based LRPs may not be appropriate operationally if new management procedures are applied that result in changes in covariance among CUs. For fisheries without a history of weak-stock management the assumption of stationarity in covariance in exploitation may hold, as in Interior Fraser River Coho, supporting their application of logistic regression approaches to identify recovery targets."-->
 
 
-Reliability of estimation (Principle 4) depends on the reliability of underlying data and the fit of logistic regression as described by model diagnostics. For this method, uncertainties can be propagated from CU-level benchmarks and status to LRPs.  One assumption of this method is that the relationship between aggregate abundances and CU-level status observed historically represents the current relationship. If the covariance among CUs or relative productivities and capacities of CUs is non-stationary, logistic regression-based LRPs may be unreliable. Furthermore, LRPs may be unreliable if harvest strategies change over time such that relative exploitation of CUs changes (e.g., due to change towards weak stock management).  Logistic regression-based LRPs are aligned with Principle 7 to the extent that aggregate abundances are a reliable predictor of CU level statuses, with the caveat that CU status on a single metric may deviate from multidimensional approach recommended under the WSP.
+Reliability of estimation (Principle 4) depends on the reliability of underlying data and the fit of logistic regression as described by model diagnostics. For this method, uncertainties can be propagated from CU-level benchmarks and status to LRPs.  One assumption of this method is that the relationship between aggregate abundances and CU-level status observed historically represents the current relationship. If the covariance among CUs or relative productivities and capacities of CUs is non-stationary, logistic regression-based LRPs may be unreliable. Furthermore, LRPs may be unreliable if harvest strategies change over time such that relative exploitation of CUs changes (e.g., due to change towards weak stock management).  Logistic regression-based LRPs are aligned with Principle 7 to the extent that aggregate abundances are a reliable predictor of CU level statuses, with the caveat that CU status on a single metric may deviate from multidimensional approach recommended under the WSP.    
 
 <!--CH: moved to uncertainties section in last chapter "Also, it is not possible to assess sensitivity of LRPs to  structural assumptions about covariance in population dynamics among CU and the relationship between aggregate abundances and CU statuses, as the LRP depends only on the logistic fit to observed data." -->
 
@@ -85,11 +86,11 @@ Reliability of estimation (Principle 4) depends on the reliability of underlying
 
 Similar to logistic regression-based LRPs, projection-based LRPs rely on an underlying relationship between aggregate abundances and status of component CUs. However, unlike for logistic regression-based LRPs, for projection-based LRPs the aggregate abundances where there is a high probability of all CUs being above their lower benchmark is identified from forward projections instead of historical data.  
 
-The projection-based LRP approach uses population parameters of individual CUs within an SMU to project abundances forward with natural variability in recruitment and ages-at-maturity under current exploitation rates characterized with annual implementation uncertainty. Projections are run for 30 years after an initialization period to remove the impacts of initial conditions and identify aggregate abundances characterized by an equilibrium state represented by stable distribution of projected abundances. Projection-based LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. $S_{gen}$). We developed projection-based LRPs for SMUs that are managed under constant exploitation rates, though more complicated management procedures that also include an observation component could also be included in future iterations <!--CH: is this true???-->. As for logistic regression-based LRPs, we relied on status estimated from a single metric rather than the Rapid Multidimensional Scanner Tool because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Tool.
+The projection-based LRP approach uses population parameters of individual CUs within an SMU to project abundances forward with natural variability in recruitment and ages-at-maturity under current exploitation rates characterized with annual implementation uncertainty. Projections are run for 30 years after an initialization period to remove the impacts of initial conditions and identify aggregate abundances characterized by an equilibrium state represented by stable distribution of projected abundances. Projection-based LRPs are then estimated using these projected CU abundances to characterize the relationship between aggregate SMU-level spawner abundance and the probability that all CUs will be above their lower benchmarks (e.g. S\textsubscript{gen}). We developed projection-based LRPs for SMUs that are managed under constant exploitation rates, though more complicated management procedures that also include an observation component could also be included in future iterations <!--CH: is this true??? CW: yes. Although I would remove the mention to obs component.  Right now projections were implement with fixed ER + implementation error, I'd rephrase to: We developed projection-based LRPs for SMUs that are managed under constant average exploitation rates, though more complicated management procedures could be used in future iterations -->. As for logistic regression-based LRPs, we relied on status estimated from a single metric rather than the Pacific Salmon Status Scanner because the projections are meant to capture equilibrium conditions and are not appropriate for identifying status on temporal trends which are included as metrics in the Scanner.
 
-One advantage of the approach for projection-based LRPs is that it allows for explicit consideration of uncertainty in underlying assumptions about model parameters and the covariance among CUs by including those uncertainties as random components of the projections. Furthermore, unlike logistic regression-based LRPs, this method is not limited by historical data on CU status. To implement projection-based LRPs, we adapted a previously developed R package for performing closed-loop simulation modelling, samSim [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020], as described in the Appendix to Holt et al. (in review) and provided online (see Appendix \@ref(app:first-appendix)).  
+One advantage of the approach for projection-based LRPs is that it allows for explicit consideration of uncertainty in underlying assumptions about model parameters and the covariance among CUs by including those uncertainties as random components of the projections. Furthermore, unlike logistic regression-based LRPs, this method is not limited by historical data on CU status. To implement projection-based LRPs, we adapted a previously developed R package for performing closed-loop simulation modelling, samSim [@holtQuantitativeToolEvaluating2020; @freshwaterBenefitsLimitationsIncreasing2020], as described in the Appendix to Holt et al. (in review) and available online (see Appendix \@ref(app:first-appendix)).  
 
-After providing parameter distributions describing the CU-level population dynamics and exploitation to samSim, the projections included 4 main steps:
+After providing parameter distributions describing the CU-level population dynamics and exploitation <!--CW: management procedures, instead? -->to samSim, the projections included 4 main steps:
 
 1. Project spawner abundances forward for 30 years after an initialization period and over $nTrial$ stochastic simulations, where nTrials was choosen to stabilize results.
    
@@ -111,13 +112,16 @@ knitr::include_graphics("figure/methods-Example-ProjectedLRP.png")
 ```
 
 
-Similar to logistic regression-based LRPs, for projection-based LRPs the uncertainty in CU benchmarks and status are explicitly accounted for when deriving the probability of all CUs being above their lower benchmarks, but unlike logistic regression-based LRPs, there is no estimation uncertainty in projection-based LRPs because a logistic regression (or other model) is not required. Probabilities are derived directly from projections and underlying uncertainties are integrated directly into the overall probably. Therefore 95% CIs are not provided. 
+Similar to logistic regression-based LRPs, for projection-based LRPs the uncertainty in CU benchmarks and status are explicitly accounted for when deriving the probability of all CUs being above their lower benchmarks, but unlike logistic regression-based LRPs, there is no estimation uncertainty in projection-based LRPs because a logistic regression (or other model) is not required. Probabilities are derived directly from projections and underlying uncertainties are integrated directly into the overall probability. Therefore 95% CIs <!--CW replace with "confidence intervals" --> are not provided. 
 
 Also, similar to logistic regression based LRPs, structural uncertainty in underlying population dynamics can be considered through sensitivity analyses or model averaging by combining results form stochastic random trials across those structural assumptions. See our implementation for Interior Fraser Coho Salmon in Holt et al. (in review) for more details.
 
-Similar to logistic regression-based LRPs, projection-based LRPs are aligned with Principle 1 to the extent that serious harm is indicated by status of any one CU being in the red zone under the WSP and that the emergent (projected) relationship between aggregate abundances and probability of all CUs being above their lower benchmark holds. Also, similar to logistic regression-based LRPs, projection-based LRPs use only one metric of annual estimates of spawner abundances, and therefore do not use the best available information (Principle 2) when CUs statuses rely on other metrics, such as trends in data-limited contexts.
+<!--CW: I really like how you bring back the principles in this discussion --> 
 
-Similar to logistic regression-based LRPs, projection-based LRPs are operational (Principle 3) to some extent when harvest management occurs at the aggregate level and require aggregate-abundance based LRP to inform management decisions. However, like logistic regression-based LRPs they are more difficult to communicate being derived from projections under assumptions of equilibrium, and they require the choice of probability of all CUs being above their lower benchmarks which is difficult to justify. <!--CH moved to CH6 of case study paper to simplify text here, and b/c showing the sensitivity to ER actually makes this methods more useful/operational, not less, at least according to Wilf. "Furthermore, projection-based LRPs are sensitive to exploitation rates, being higher under high exploitation rates and vice versa. Therefore an projection-based LRP developed under current exploitation cannot be used as a basis for evaluating alternative management procedures. However demonstrating the changes in aggregate abundances required for all CUs to be above lower benchmarks (i.e. changes in projection-based LRP) under different exploitation scenarios may help analysts and managers understand the implications of changing exploitation rates on the ability to achieve WSP objectives."--> Reliability of estimation (Principle 4) depends on the underlying parameter distributions and model structure capturing the plausible range true underlying dynamics. Similar to logistic regression-based LRPs, for this method, uncertainties can be propagated from CU-level benchmarks and status to LRPs. But unlike logistic regression-based LRPs, this method can integrate plausible ranges of parameter and structural uncertainties that may differ from those observed historically. Reliability of LRP estimates depends on the reliability of underlying model parameters and structure.
+Similar to logistic regression-based LRPs, projection-based LRPs are aligned with Principle 1 to the extent that serious harm is indicated by status of any one CU being in the red zone under the WSP and that the emergent (projected) relationship between aggregate abundances and probability of all CUs being above their lower benchmark holds. Also, similar to logistic regression-based LRPs, projection-based LRPs use only one metric of annual estimates of spawner abundances, and therefore do  <!--may --> not use the best available information (Principle 2) when CUs statuses rely on other metrics, such as trends in data-limited contexts.
+
+Similar to logistic regression-based LRPs, projection-based LRPs are operational (Principle 3) to some extent when harvest management occurs at the aggregate level and require aggregate-abundance based LRP to inform management decisions. However, like logistic regression-based LRPs they are more difficult to communicate being derived from projections under assumptions of equilibrium, and they require the choice of probability of all CUs being above their lower benchmarks which is difficult to justify. <!--CH moved to CH6 of case study paper to simplify text here, and b/c showing the sensitivity to ER actually makes this methods more useful/operational, not less, at least according to Wilf. "Furthermore, projection-based LRPs are sensitive to exploitation rates, being higher under high exploitation rates and vice versa. Therefore an projection-based LRP developed under current exploitation cannot be used as a basis for evaluating alternative management procedures. However demonstrating the changes in aggregate abundances required for all CUs to be above lower benchmarks (i.e. changes in projection-based LRP) under different exploitation scenarios may help analysts and managers understand the implications of changing exploitation rates on the ability to achieve WSP objectives."--> Reliability of estimation (Principle 4) depends on the underlying parameter distributions and model structure capturing the plausible range true underlying dynamics. Similar to logistic regression-based LRPs, for this method, uncertainties can be propagated from CU-level benchmarks and status to LRPs. But unlike logistic regression-based LRPs, this method can integrate plausible ranges of parameter and structural uncertainties that may differ from those observed historically <!--aligning this method with principles 5 and 6--> . Reliability of LRP estimates depends on the reliability of underlying model parameters and structure <!--model structure assumptions -->.
+
 
 Similar to logistic regression-based LRPs, Projection-based LRPs are aligned with Principle 7 to the extent that aggregate abundances are a reliable predictor of CU level statuses, with the caveat that CU status on a single metric may deviate from multidimensional approach recommended under the WSP.
 
