--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -7,7 +7,7 @@ output:
 # CASE STUDY 2: WEST COAST VANCOUVER ISLAND CHINOOK{#WCVIchinookChapter}
 ## CONTEXT
 
-The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 indicators stocks, which are stocks with relatively complete time-series and consistent observation methodology (Figure \@ref(fig:chinook-map); Table \@ref(tab:chinook-Overview), @riddellReview2001Chinook2002). Hatchery enhancement is an important component of many of these stocks. Hatcheries are a conservation tool for wild salmon populations and can increase the availability of fish for harvest, but they can also reduce wild genetic diversity and are considered a risk factor for the long-term sustainability of CUs [@withlerGeneticallyBasedTargets2018]. Therefore only indicator stocks without significant enhancement were included in our analyses. Proportionate Natural Influence, PNI, is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating Integrated-Hatchery populations where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. Only stocks with PNI values $\geqslant$ 0.5 were included in the development of LRPs and assessment against those LRPs (J. Bokvist, pers. comm. DFO South Coast Stock Assessment). 
+The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 indicators stocks, which are stocks with relatively complete time-series and consistent observation methodology (Figure \@ref(fig:chinook-map); Table \@ref(tab:chinook-Overview), @riddellReview2001Chinook2002). Hatcheries produce a relatively large component of the total production in many of these stocks, where they help achieve harvest, conservation and assessment objectives. However, they are also considered a risk factor for the long-term sustainability of CUs because they can also reduce wild genetic diversity[@withlerGeneticallyBasedTargets2018]. As described in Holt et al. (in review), only indicator stocks without significant enhancement, i.e.,  stocks with Proportionate Natural Influence, PNI, values $\geqslant$ 0.5 were included. Most fish are natural origin in these populations, though the of 'wild' fish, second generation natural-origin fish may be in the minority [@withlerGeneticallyBasedTargets2018]. 
 
 <!--Sabrina email: In short, the management of hatchery produced fish must be separated from wild production. This is a bit tricky for WCVI as we don’t have enough information or data to quantitatively separate ‘natural’ and ‘hatchery’. It would be ideal to remove 1st generation hatchery-origin fish but for WCVI we simply don’t have that information. Strays have been a real issue but hard to quantify the impacts to each non-targeted hatchery system without collecting the data needed annually as each year would differ. How much stray to a particular system and for how long are factors but we don’t assess this enough or adequately. For example, during a M/R project in the Moyeha the 2010 half the samples were hatchery but only 12 samples were collected and the next year all samples were natural origin. 
 We need to be clear to include this uncertainty for WCVI in the report stating results could change if more data was available to adequately and quantitatively (not just I see a clipped salmon or not but genetics and/or more directed projects to the cause) separate the hatchery/1st generation from natural spawners. This is after all a ‘tool-kit’ that has options to choose from but may not have the full picture until gaps are filled. Highlighting the much needed information to properly segregate hatchery to natural spawners would be required to adequately assess.-->
@@ -19,14 +19,14 @@ knitr::include_graphics("figure/chinook-map.png")
 \renewcommand*{\arraystretch}{1.5}
 \begin{table}[ht]
 \centering
-\caption{Overview of WCVI Chinook Stock Management Unit. Italics represent indicators with average PNI values < 0.5. Note, the inlets, San Juan and Nitinat do not contain indicator stocks with PNI < 0.5 and are not included in these analyses. WCVI is West Coast of Vancouver Island.}
+\caption{Overview of WCVI Chinook Stock Management Unit. Italics represent indicators with average PNI values < 0.5 and are excluded from analyses. The inlets, San Juan and Nitinat do not contain indicator stocks with PNI < 0.5 and are not included in these analyses. }
 \begin{tabular}{p{0.3\textwidth}p{0.2\textwidth}p{0.4\textwidth}}
 \hline
 CU       &  Inlets   & Indicators\\ 
 \hline
-WCVI-South (CK-31) & San Juan, Nitinat, Barkley, Clayoquot & \emph{San Juan}, \emph{Nitinat}, Nahmint , \emph{Sarita}, \emph{Somass}, Bedwell/Ursus , Megin , Moyeha , \emph{Tranquil} \\
-WCVI-Nootka \& Kyuoquot (CK-32) & Nootka/Esperanza, Kyuquot & \emph{Burman}, \emph{Conuma}, \emph{Gold}, \emph{Leiner}, Tahsis, Zeballos, Artlish, Kaouk, Tahsish \\
-WCVI-North (CK-33) &  Quatsino  & Cayeghle, Marble \\                     
+West Vancouver Island-South (CK-31) & San Juan, Nitinat, Barkley, Clayoquot & \emph{San Juan}, \emph{Nitinat}, Nahmint , \emph{Sarita}, \emph{Somass}, Bedwell/Ursus , Megin , Moyeha , \emph{Tranquil} \\
+West Vancouver Island-Nootka \& Kyuoquot (CK-32) & Nootka/Esperanza, Kyuquot & \emph{Burman}, \emph{Conuma}, \emph{Gold}, \emph{Leiner}, Tahsis, Zeballos, Artlish, Kaouk, Tahsish \\
+West Vancouver Island-North (CK-33) &  Quatsino  & Cayeghle, Marble \\                     
 \hline
 \end{tabular}
 (\#tab:chinook-Overview)
@@ -34,51 +34,31 @@ WCVI-North (CK-33) &  Quatsino  & Cayeghle, Marble \\
 
 
 
-
-
-<!-- CH comment: # Ask Luke to change San Juan River to San Juan, and Nitinat Lake to Nitinat
- 
-
-CW: the table in md written below seems to be causing the text to go beyond the end of the page. I tried to fix it but I wasn't able to.  I re wrote the table in latex and it seems it makes the problem go away, but formatting is not as pretty in the final pdf. 
-
+<!-- CH: Thanks for formatting this table Catarina. If we have time, I'd like to format it so that the second column as a separate row for each inlet. I could not get it work in the pdf version of the table below, and I noticed, all inlets are in a string in the table above. I can work on this next week.
 
 
 ----------------------- ----------------------- ----------------------------------------------
 CU                      Inlets                  Indicators
 ----------------------- ----------------------- ----------------------------------------------
-WCVI-South              San Juan,               *San Juan*, 
-(CK-31)                 Nitinat,                *Nitinat*, 
+West Vancouver Island-  San Juan,               *San Juan*, 
+South (CK-31)           Nitinat,                *Nitinat*, 
                         Barkley,                Nahmint , *Sarita*, *Somass*, 
                         Clayoquot,              Bedwell/Ursus , Megin , Moyeha , *Tranquil*
                                                           
-WCVI-Nootka & Kyuoquot  Nootka/Esperanza,       *Burman*, *Conuma*, *Gold*, *Leiner*, Tahsis,
-(CK-32)                 Kyuquot                 Zeballos,
-                                                Artlish, Kaouk, Tahsish,
+West Vancouver Island-  Nootka/Esperanza,       *Burman*, *Conuma*, *Gold*, *Leiner*, Tahsis,
+Nootka & Kyuoquot       Kyuquot                 Zeballos,
+(CK-32)                                                Artlish, Kaouk, Tahsish,
                                          
-WCVI-North              Quatsino                Cayeghle, Marble
-(CK-33)                
+West Vancouver Island-  Quatsino                Cayeghle, Marble
+North (CK-33)                
 
 ----------------------- ----------------------- ----------------------------------------------                        
 
-Table: (\#tab:chinook-Overview) Overview of WCVI Chinook Stock Management Unit. Italics represent indicators with average PNI values < 0.5. Note, the inlets, San Juan and Nitinat do not contain indicator stocks with PNI < 0.5 and are not included in these analyses. WCVI is West Coast of Vancouver Island. 
-
-
-
-
+Table: (\#tab:chinook-Overview) Overview of WCVI Chinook Stock Management Unit. Italics represent indicators with average PNI values < 0.5 and are excluded from analyses. The inlets, San Juan and Nitinat do not contain indicator stocks with PNI < 0.5 and are not included in these analyses. WCVI is West Coast of Vancouver Island. 
  -->
 
 
-
-
-This SMU was included as a case study to demonstrate the development of LRPs under data limitations when stock-recruitment relationships are not available to develop stock-recruitment based benchmarks, but habitat-based benchmarks are, as is common for Chinook salmon in BC. WCVI Chinook is also included in the proposed first batch of major stocks for regulation under the Fish Stock provisions, necessitating the development of LRPs for this SMU.<!-- CH comment: add reference here?-->
-
-<!-- KH: Two more unique aspects of this case study that you may wish to mention here are:
-
-(1) high levels of enhancement; required us to apply rules about PNI based on previous work by Withler et al.
-
-(2) demonstration of a hybrid approach that preserved CU-scale diversity, while also considering inlet-scale diversity.  Note that this shows how proposed LRP methods can be tailored for specific SMUs so long as they still meet the requirements of the WSP to preserve CUs ??? ... (I'm not sure how far we want to go down this path, but it may be worth mentioning???)
-
--->
+This SMU was included as a case study to demonstrate the development of LRPs under data limitations when recruitment data are not available for deriving stock-recruitment based benchmarks, but habitat-based benchmarks exist, as is the case for Chinook Salmon in BC. WCVI Chinook is also included in the proposed first batch of major stocks for regulation under the Fish Stock provisions, necessitating the development of LRPs for this SMU. WCVI Chinook is also highly enhanced yet does not have data on the proportion of hatchery-origin spawners contributing to total production, similar to many other Chinook Salmon SMUs. Furthermore, this SMU was unique among the case studies in the consideration of inlets within CUs demonstrating various spatial scales that can be integrated into SMU-level assessments. 
 
 Most Chinook in this SMU are 'ocean type', entering the ocean 1-3 months after emergence from spawning gravel [@dfoAssessmentWestCoast2012]. 'Stream type' fish, those that stay in the river for one year after emergence, are rare. After entering the ocean, WCVI Chinook migrate into northern BC and southeast Alaska waters to rear for 2 to 7 years, returning to spawn predominantly at ages 4 and 5 [@dfoAssessmentWestCoast2012].
 
@@ -93,7 +73,7 @@ Based on differences in threats and the coastal marine environment, we suggest t
 
 ### Previous assessments
 
-Two of the 3 CUs in this SMU, WCVI-South and WCVI-Nootka & Kyuquot, were assessed as 'red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016]. For these CUs, assessments were based on component stocks without hatchery enhancement within the most recent 12 years, omitting stocks with enhancement during that period. For WCVI-South, red status was based primarily on threats of genetic introgression from strays from nearby large-scale hatcheries. For WCVI-Nootka & Kyuoquot, red status was based on a very low index of abundance for non-enhanced populations and threats of genetic introgression from strays from large-scale hatcheries. The third CU, WCVI-North, was not assessed by DFO in 2016 because all component stocks had some level of enhancement over the most recent 12 years (other metrics of hatchery enhancement, e.g., Proportionate Natural Influence or PNI were not considered). A list of indicator and non-indicator stocks within each CU is available in @brown2020SummaryAbundance2020. 
+Two of the 3 CUs in this SMU, West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot, were assessed as 'red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016]. For these CUs, assessments were based on component stocks without hatchery enhancement within the most recent 12 years, omitting stocks with enhancement during that period. For West Vancouver Island-South, red status was based primarily on threats of genetic introgression from strays from nearby large-scale hatcheries. For West Vancouver Island-Nootka & Kyuoquot, red status was based on a very low index of abundance for non-enhanced populations and threats of genetic introgression from strays from large-scale hatcheries. The third CU, West Vancouver Island-North, was not assessed by DFO in 2016 because all component stocks had some level of enhancement over the most recent 12 years (other metrics of hatchery enhancement, e.g., Proportionate Natural Influence or PNI were not considered). A list of indicator and non-indicator stocks within each CU is available in @brown2020SummaryAbundance2020. 
 
 <!-- KH: It's interesting that the decision to assess WCVI-South as 'red' was based on hatchery straying; not low abundance of non-enhanced population components. This is something that wouldn't be captured in the multidimensional scanner tool, right?  Also interesting that WCVI-North was not assessed by WSP, but we do use it as part of the LRP work which we are designing to match with the WSP. I'm just flagging this for now as something I want to think more about / keep in mind as I read guidelines paper recommendations on enhancement  -->
 
