--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -61,8 +61,29 @@ The PA policy also suggests that when a stock is DD, a meta analysis approach sh
 This may be a bit out there but: maybe we could suggest the establishment of a data collection plan that would be analogous to the recovery plan but to address data deficiency. -This plan would include a list of data that could be collected (e.g. monitoring of spawning grounds, establishment of genetic markers, catch sampling, ageing, etc.) and potential costs associated with everything? -- Also this plan could clearly indicate if spawning grounds are too remote, inaccessible, or too costly to monitor. -- I think that having that kind of information documented would go a long way in establishing priorities.    
 -->
 
+<!--CH additional comments (8 Dec)
+If at least one CU in an SMU is data deficient and its status cannot be inferred from the remaining CUs, then we had argued that the SMU was data deficient. However, if at least one of the data-rich CUs is red, then perhaps it’s not data-deficient as an SMU, but below the LRP. I think we need to revise our wording around data-deficient SMUs. We can provide status on an SMU with as little as one data-rich CU, but the power to detect a red is low.
+
+I know we had reserved ‘interim status’ for cases where there were data-deficient CUs, and where status could be inferred from the other CUs, However, I’m rethinking this. Perhaps that could be called status (or some other qualifier?), while reserving ‘interim’ status for SMUs where status of data deficient CUs cannot be inferred from data-rich CUs.  One challenge is that an interim status with only 1 green status may create incentives to not increase monitoring (to avoid finding a red).  However an ‘interim’ red status should trigger a rebuilding plan. Thoughts?
+
+[4:38 PM] Holt, Carrie
+There are two cases: (1) there are data-deficient CUs and status cannot be inferred from data-rich CUs and (2) there are data-deficient CUs and status can be inferred from data rich CUs.
+
+[4:38 PM] Holt, Carrie
+For (1), I think these should be interim status with strong recommendation for monitoring. Because, I now realize that even one data-rich red can trigger a rebuilding plan and should not be ignored.
+
+[4:39 PM] Holt, Carrie
+For (2), I'm not sure what to call those. 'interim status' as well, just plain 'status', or some other qualifier that indicates we're not very certain. This would also be associated with recommendation for monitoring (though perhaps lower priority). We had called these 'interim', but now it's confusing with category (1).
+
+Though we don't have colors for SMU status. Our metric is proportion of CUs above red as a %, either below 100% or at 100%. So the 100% is always provisional, but any other % is also provisional. The fact that LRP is breached is not provisional though. But then what is the difference between categories (1) and (2). Are they the exact same? If so, we don't need the 4 criteria...??
+
+
+
+-->
+
 **Threats** are defined here as any human activity or process that causes harm, death, or behavioural changes to a species, or the destruction, degradation, and/or impairment of its habitat, to the extent that population-level effects occur [@dfoGuidanceAssessingThreats2014]. Information on threats may be derived from published threats and habitat assessments, and may incorporate harvest, effects of land-use in freshwater and estuarine habitats, climate change, and genetic impacts from hatcheries. Because SMUs are defined as groups of CUs that are managed together with the objective of achieving a joint status, it is likely that CUs within an SMU will have similar vulnerabilities to fisheries. Data on genetic stock identification from fisheries can be used to further assess similarities in vulnerabilities in harvest. Beyond fisheries, CUs that are vulnerable to different threats in freshwater and marine environment within an SMU may have divergent statuses and trends. 
 
+<!--CH; revise text below to put more emphasis on FAZs. I just realized that all 3 WCVI CUs are in the same FAZ!-->
 
 Similarity in **environmental conditions and drivers** in estuarine and freshwater habitat as reflected in, for example, hydrological regimes and macroclimate in spawning and rearing areas. Differences in hydrological regimes, such as whether systems are fed by rainfall or snowmelt, can impact biological characteristics of Chinook salmon, such as spawning time and age, and <!--can--> therefore <!--impact --> status and trends [@beechieHydrologicRegimeConservation2006] <!--KH: could consider moving beechie citation to after mention of imapcts on spawn timing and age since this is what his paper looked at; the extension to status and trends is ours (which is logical, but not quite what they showed) -->. Broad similarities in macroclimate can be represented by Biogeoclimatic Zones, defined as "geographic areas having similar patterns of energy flow, vegetation and soils as a result of a broadly homogenous macroclimate." [@medingerEcosystemsBritishColumbia1991]<!--remove; (BC Ministry of Forestry 2021, https://www.for.gov.bc.ca/hfd/library/documents/glossary/Glossary.pdf). In other words, these terrestrial zones have relatively uniform climate and vegetation. There are approximately 18 biogeoclimatic zones in BC and the Yukon, ranging from Coastal Douglas-Fir on southeastern Vancouver Island to Boreal White and Black Spruce in northern BC. --> CUs with spawning and rearing grounds within different biogeoclimatic zones may experience different macroclimates and hence environmental drivers in estuaries and freshwater. Instead of biogeoclimatic zones, @holtbyConservationUnitsPacific2007 delineate freshwater ecological drainage units to differentiate freshwater ecosystems for Pacific salmon ("Freshwater Adaptive Zones"<!--;FAZ (KH: suggestion to give abbreviation here so can be used below; I found I was getting lost from reference to 'units'; I think referring directly to FAZ would help)-->). These units"<!-- FAZ --> are defined primarily based on "Ecological Drainage Units" [@ministryoftheenvironmentEcologicalAquaticUnits2021] and consist of salmon populations with shared zoogeographic histories at relatively fine spatial scales such that each CU tends to be associated with a unique <!--FAZ-->unit. Therefore <!--FAZ -->those units are less useful for identifying similarity in environmental conditions among CUs, though other levels of aggregation of Ecological Drainage Units could be developed in the future to inform similarities in freshwater conditions among CUs.  <!-- KH: should we explicitly say that we recommend using biogeoclimatic zones instead of FAZ alone when assessing possible similarity to environmental drivers associated with freshwater habitats?-->
 
